--- a/Aula3/Exercicio2/index.html
+++ b/Aula3/Exercicio2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -8,8 +8,8 @@
     <title>Account-Maker</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="js.js"></script>
     <link rel="manifest" href="manifest.json">
+    <script src="js.js"></script>
     <style>
         body {
             margin-top: 30px;
@@ -17,7 +17,7 @@
             margin-right: 30px;
         }
 
-        #email{
+        #email {
             margin-left: -15px;
         }
     </style>
@@ -28,19 +28,17 @@
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="inputEmail4">Nome</label>
-                <input type="text" class="form-control" id="inputName" name="nome" placeholder="Nome" value=""
-                    required>
+                <input type="text" class="form-control" id="inputName" name="nome" placeholder="Nome" value="" required>
             </div>
             <div class="form-group col-md-6">
                 <label for="inputPassword4">Apelido</label>
-                <input type="text" class="form-control" id="inputName2" name="nome" placeholder="Apelido"
-                    value="" required>
+                <input type="text" class="form-control" id="inputName2" name="nome" placeholder="Apelido" value=""
+                    required>
             </div>
         </div>
         <div class="form-group col-md-6" id="email">
             <label for="inputEmail4">Email</label>
-            <input type="email" class="form-control" id="inputEmail" name="nome" placeholder="Email"
-                value="" required>
+            <input type="email" class="form-control" id="inputEmail" name="nome" placeholder="Email" value="" required>
         </div>
         <div class="form-group">
             <label for="inputAddress">Morada</label>
